// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="cx6oiet soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="c-smsfdq soui-radio-indicator-wrapper"
  >
    <span
      class="c-cz3aa7 soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-iv35qp soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="c-ggxw0v soui-radio-group"
>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="c-ggxw0v soui-radio-group c-bry5zh soui-radio-group-button ckylj3k soui-button-group"
>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked cvrrn77 soui-button-primary c871ech soui-button-button"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="c-ggxw0v soui-radio-group c-bry5zh soui-radio-group-button ckylj3k soui-button-group"
>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button ciojhir soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button ciojhir soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked cvrrn77 soui-button-primary c871ech soui-button-button ciojhir soui-button-outline"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button ciojhir soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button ciojhir soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button ciojhir soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button ciojhir soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="c-ggxw0v soui-radio-group"
>
  <div
    class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="c-ggxw0v soui-radio-group"
>
  <div
    class="cx6oiet soui-radio-wrapper c-8unxv3 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper c-8unxv3 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper c-8unxv3 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper c-8unxv3 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper c-8unxv3 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper c-8unxv3 soui-radio-wrapper-disabled c-xza15a soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper c-8unxv3 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="c-ggxw0v soui-radio-group"
>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper c-8unxv3 soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="c-ggxw0v soui-radio-group"
>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="c-ggxw0v soui-radio-group"
>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-ggxw0v soui-radio-group c-bry5zh soui-radio-group-button ckylj3k soui-button-group"
  >
    <button
      class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked cvrrn77 soui-button-primary c871ech soui-button-button cl53koo soui-button-small"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button cl53koo soui-button-small"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button cl53koo soui-button-small"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-ggxw0v soui-radio-group c-bry5zh soui-radio-group-button ckylj3k soui-button-group"
    style="margin-top: 24px;"
  >
    <button
      class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-ggxw0v soui-radio-group c-bry5zh soui-radio-group-button ckylj3k soui-button-group"
    style="margin-top: 24px;"
  >
    <button
      class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked cvrrn77 soui-button-primary c871ech soui-button-button cl11p64 soui-button-large"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button cl11p64 soui-button-large"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="cx6oiet soui-radio-wrapper c5wkfol soui-button-secondary c871ech soui-button-button cl11p64 soui-button-large"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="cx6oiet soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="c-smsfdq soui-radio-indicator-wrapper"
  >
    <span
      class="c-cz3aa7 soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-iv35qp soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
